# rust_ocr_transformer

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml
src/: emit.rs  engine.rs  error.rs  lib.rs  postprocess.rs  preprocess.rs  python.rs  sampler.rs  tasks.rs  temporal.rs  types.rs
src/backends/: mod.rs  tract.rs
tests/: pipeline.rs
