[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "rust_ocr_transformer"
description = "Video-first Rust OCR pipeline — SSIM frame sampling + temporal dedup, emitting timestamped text/SRT for RAG ingestion."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "rust_ocr_transformer contributors" }]
keywords = ["ocr", "video", "subtitle", "rag", "vector-db", "onnx"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# version 은 Cargo.toml 의 package.version 에서 자동으로 가져온다 (dynamic).
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/arabangoo/rust_ocr_transformer"

[tool.maturin]
# Rust 의 #[pymodule] 함수명 = cdylib 이름과 일치해야 한다.
module-name = "rust_ocr_transformer"
# Python 바인딩(cdylib) 활성 feature.
features = ["python"]
# abi3(stable ABI) 휠 → Python 3.9+ 단일 휠로 호환.
